# refindgen

./: Cargo.toml  README.md  flake.nix  module.nix  package.nix
src/: bootspec.rs  config.rs  efi.rs  fs.rs  generation.rs  main.rs
